# twitch_bot_cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md
Modules/ChatServer/: CMakeLists.txt
Modules/ChatServer/Source/: Broadcaster.cpp  Broadcaster.hpp  ChatServer.cpp  ChatServer.hpp  HttpSession.cpp  HttpSession.hpp  Listener.cpp  Listener.hpp  WebSocketSession.cpp  WebSocketSession.hpp
Modules/ChatServer/_test/: CMakeLists.txt
Modules/ChatServer/_test/ChatServerTest/: CMakeLists.txt  ChatServerTest.cpp
Modules/TwitchBot/: CMakeLists.txt
Modules/TwitchIRCParser/: CMakeLists.txt
Modules/TwitchIRCParser/Source/: TwitchIRCParser.cpp  TwitchIRCParser.hpp
Modules/TwitchIRCParser/_test/IRCParserTest/: CMakeLists.txt  IRCParserTest.cpp
Plugins/CommandList/: CMakeLists.txt
Plugins/CommandList/Source/: CommandList.cpp  CommandList.hpp  CommandListMessage.cpp  CommandListMessage.hpp
Plugins/CppFormat/: CMakeLists.txt
Plugins/CppFormat/Source/: CppFormat.cpp  CppFormat.hpp  CppFormatMessage.cpp  CppFormatMessage.hpp
Plugins/Poke/: CMakeLists.txt
Plugins/Poke/Source/: Poke.cpp  Poke.hpp  PokeMessage.cpp  PokeMessage.hpp
Source/: CertificateStore.hpp  Certificates.cpp  Certificates.hpp  Command.cpp  Command.hpp  Conversion.hpp  DatabaseConfig.cpp  DatabaseConfig.hpp  MessageSerializer.cpp  MessageSerializer.hpp  PluginModule.hpp  PluginRegistry.hpp  ServerConfig.cpp  ServerConfig.hpp  TwitchBot.cpp  TwitchBotConfig.cpp  TwitchBotConfig.hpp
Source/Commands/: CppFormat.cpp  CppFormat.hpp  CppFormatMessage.cpp  CppFormatMessage.hpp
Source/Commands/CommandList/: CommandList.cpp  CommandList.hpp  CommandListMessage.cpp  CommandListMessage.hpp
Source/Commands/CppFormat/: CppFormat.cpp  CppFormatMessage.cpp  CppFormatMessage.hpp
Source/Core/: CMakeLists.txt
Source/Core/Source/: CertificateStore.hpp  Command.hpp  Conversion.hpp  Database.hpp  MessageSerializer.hpp  PluginInfo.hpp  SystemMessageType.hpp
Source/Windows/: CertificateStore.cpp  PlatformInclude.hpp
StreamDaemon/Source/: Xoshiro256StarStar.hpp
TwitchIRCParser/_test/: CMakeLists.txt
_cmake/: CPMPackageManager.cmake  Dependencies.cmake  Module.cmake  ProjectOptions.cmake  ProjectWarnings.cmake
config/: .clang-format  database.json  server.json  twitch.json
http/: index.html  overlay.html
http/css/: command_commands.css  command_cpp.css  command_poke.css  overlay.css
http/js/: overlay.js
